# console-like-chat

./: CMakeLists.txt  Makefile  README.md
CMake/: FindBearLibTerminal.cmake  Findnng.cmake
lib/: .gitignore
src/: client.h  main.cpp  server.h
